--- a/patient-service.yaml
+++ b/patient-service.yaml
@@ -22,3 +22,12 @@ spring:
   sql:
     init:
       mode: always
+  
+  eureka:
+    instance:
+      prefer-ip-address: true
+    client:
+      fetch-registry: true
+      register-with-eureka: true
+      service-url:
+        default-zone: http://localhost:8761    
