--- a/patient-service.yaml
+++ b/patient-service.yaml
@@ -1,27 +1,27 @@
-# spring:
-#   application:
-#     name: patient-service
+spring:
+  application:
+    name: patient-service
 
-#   h2:
-#     console:
-#       path: /h2-console
+  h2:
+    console:
+      path: /h2-console
 
-#   datasource:
-#     url: jdbc:h2:mem:patientsdb
-#     driver-class-name: org.h2.Driver
-#     username: ${DB_USERNAME}
-#     password: ${DB_PASSWORD}
-#     initialization-mode: always
+  datasource:
+    url: jdbc:h2:mem:patientsdb
+    driver-class-name: org.h2.Driver
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    initialization-mode: always
 
-#   jpa:
-#     database-platform: org.hibernate.dialect.H2Dialect
-#     datasource-initialization: true
-#     hibernate:
-#       ddl-auto: update
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    datasource-initialization: true
+    hibernate:
+      ddl-auto: update
 
-#   sql:
-#     init:
-#       mode: always
+  sql:
+    init:
+      mode: always
   
   eureka:
     instance:
